GrabDrop working. close_hand=grab, L=release.

--- a/samples/GrabDrop/resources/interactor.cfg
+++ b/samples/GrabDrop/resources/interactor.cfg
@@ -1,7 +1,39 @@
+HandGesture
+{
+	name=L
+	label=13
+	model=GrabDrop.app/Contents/Resources/Models/valcriL.dat
+	threshold=4.0
+}
+
+HandGesture
+{
+	name=Close
+	label=16
+	model=GrabDrop.app/Contents/Resources/Models/valcriClose.dat
+	threshold=3.5
+}
+
+
+HandGesture
+{
+	name=Grab
+	label=206
+	from=ANY
+	to=Close
+}
+
+HandGesture
+{
+	name=Release
+	label=207
+	from=ANY
+	to=L
+}
 
 HandTracker
 {
-	model=ActiveEdge.app/Contents/Resources/Models/hand_detector.dat
+	model=GrabDrop.app/Contents/Resources/Models/hand_detector.dat
 	threshold=6.5
 	tracking_threshold=2.5
 }
