Adding circular slider with static gesture (audio+UPDOWON)

--- a/samples/Slider/resources/interactor.cfg
+++ b/samples/Slider/resources/interactor.cfg
@@ -1,3 +1,13 @@
+Gesture
+{
+        name= Audio
+        label=4
+        model=Slider.app/Contents/Resources/Models/GestooAudio_320.dat
+        threshold=4.0
+        usage=SYM
+        complexity = 15
+}
+
 HandGesture
 {
 	name=L
@@ -8,27 +18,10 @@ HandGesture
 
 HandGesture
 {
-	name=Close
+	name=Victory
 	label=14
 	model=Slider.app/Contents/Resources/Models/valcriVictory.dat
 	threshold=3.0
-}
-
-
-HandGesture
-{
-	name=Grab
-	label=206
-	from=ANY
-	to=Close
-}
-
-HandGesture
-{
-	name=Release
-	label=207
-	from=ANY
-	to=L
 }
 
 HandTracker
@@ -37,7 +30,6 @@ HandTracker
 	threshold=6.5
 	tracking_threshold=2.5
 }
-	
 
 DepthRange
 {
