modified Slider to work with light models

--- a/samples/Slider/resources/interactor.cfg
+++ b/samples/Slider/resources/interactor.cfg
@@ -10,25 +10,50 @@ Gesture
 
 HandGesture
 {
+	name=Close
+	label=12
+	model=Slider.app/Contents/Resources/Models/valcriIndex_light.dat
+	threshold=4.0
+}
+
+HandGesture
+{
 	name=L
 	label=13
-	model=Slider.app/Contents/Resources/Models/valcriL.dat
-	threshold=5.0
+	model=Slider.app/Contents/Resources/Models/valcriL_light.dat
+	threshold=6.0
 }
 
 HandGesture
 {
 	name=Victory
 	label=14
-	model=Slider.app/Contents/Resources/Models/valcriVictory.dat
-	threshold=3.0
+	model=Slider.app/Contents/Resources/Models/valcriVictory_light.dat
+	threshold=4.0
 }
+
+HandGesture
+{
+	name=Open
+	label=15
+	model=Slider.app/Contents/Resources/Models/valcriOpen_light.dat
+	threshold=4.0
+}
+
+HandGesture
+{
+	name=Close
+	label=16
+	model=Slider.app/Contents/Resources/Models/valcriClose_light.dat
+	threshold=4.0
+}
+
 
 HandTracker
 {
-	model=Slider.app/Contents/Resources/Models/hand_detector.dat
-	threshold=6.5
-	tracking_threshold=2.5
+	model=Slider.app/Contents/Resources/Models/hand_detector_light.dat
+	threshold=5.0
+	tracking_threshold=2.0
 }
 
 DepthRange
