changing to light models

--- a/samples/Slider/resources/interactor.cfg
+++ b/samples/Slider/resources/interactor.cfg
@@ -10,7 +10,7 @@ Gesture
 
 HandGesture
 {
-	name=Close
+	name=Index
 	label=12
 	model=Slider.app/Contents/Resources/Models/valcriIndex_light.dat
 	threshold=4.0
