Changes for the sake of bundling Adding bundle path function

--- a/samples/ActiveEdges/resources/interactor.cfg
+++ b/samples/ActiveEdges/resources/interactor.cfg
@@ -3,7 +3,7 @@ HandGesture
 {
 	name=L
 	label=13
-	model=ActiveEdge.app/Contents/Resources/Models/valcriL.dat
+	model=Models/valcriL.dat
 	threshold=5.0
 }
 
@@ -11,7 +11,7 @@ HandGesture
 {
 	name=Victory
 	label=14
-	model=ActiveEdge.app/Contents/Resources/Models/valcriVictory.dat
+	model=Models/valcriVictory.dat
 	threshold=3.0
 }
 
@@ -19,7 +19,7 @@ HandGesture
 {
 	name=Open
 	label=15
-	model=ActiveEdge.app/Contents/Resources/Models/valcriOpen.dat
+	model=Models/valcriOpen.dat
 	threshold=3.5
 }
 
@@ -27,7 +27,7 @@ HandGesture
 {
 	name=Close
 	label=16
-	model=ActiveEdge.app/Contents/Resources/Models/valcriClose.dat
+	model=Models/valcriClose.dat
 	threshold=4.0
 }
 
@@ -50,7 +50,7 @@ HandGesture
 
 HandTracker
 {
-	model=ActiveEdge.app/Contents/Resources/Models/hand_detector.dat
+	model=Models/hand_detector.dat
 	threshold=6.5
 	tracking_threshold=2.5
 }
