Config relative to resources

--- a/samples/MapView/resources/interactor.cfg
+++ b/samples/MapView/resources/interactor.cfg
@@ -1,7 +1,7 @@
 
 HandTracker
 {
-	model=mapView.app/Contents/Resources/Models/hand_detector_light.dat
+	model=Models/hand_detector_light.dat
 	threshold=5.0
 	tracking_threshold=2.0
 }
@@ -10,7 +10,7 @@ HandGesture
 {
 	name=L
 	label=13
-	model=mapView.app/Contents/Resources/Models/valcriL.dat
+	model=Models/valcriL.dat
 	threshold=3.0
 }
 
