--- a/samples/InTheCar/resources/interactor.cfg
+++ b/samples/InTheCar/resources/interactor.cfg
@@ -3,48 +3,16 @@ HandGesture
 {
 	name=Victory
 	label=14
-	model=InTheCar.app/Contents/Resources/Models/valcriVictory.dat
+	model=Models/valcriVictory_light.dat
 	threshold=3.0
 }
 
-HandGesture
-{
-	name=Open
-	label=15
-	model=InTheCar.app/Contents/Resources/Models/valcriOpen.dat
-	threshold=3.5
-}
-
-HandGesture
-{
-	name=Close
-	label=16
-	model=InTheCar.app/Contents/Resources/Models/valcriClose.dat
-	threshold=4.0
-}
-
-
-HandGesture
-{
-	name=Grab
-	label=206
-	from=ANY
-	to=Close
-}
-
-HandGesture
-{
-	name=Release
-	label=207
-	from=Close
-	to=Open
-}
 
 HandTracker
 {
-	model=InTheCar.app/Contents/Resources/Models/hand_detector.dat
-	threshold=6.5
-	tracking_threshold=2.5
+	model=Models/hand_detector_light.dat
+	threshold=5.0
+	tracking_threshold=2.0
 }
 	
 
