Changing pan to grab

--- a/samples/MapView/resources/interactor.cfg
+++ b/samples/MapView/resources/interactor.cfg
@@ -14,6 +14,14 @@ HandGesture
 	threshold=7.0
 }
 
+HandGesture
+{
+	name=Close
+	label=16
+	model=Models/valcriClose_light.dat
+	threshold=4.0
+}
+
 
 
 DepthRange
