--- a/samples/SlideController/resources/interactor.cfg
+++ b/samples/SlideController/resources/interactor.cfg
@@ -7,6 +7,23 @@ HandGesture
 	threshold=5.0
 }
 
+HandGesture
+{
+	name=L
+	label=13
+	model=Models/valcriL.dat
+	threshold=5.0
+}
+
+HandGesture
+{
+	name=Close
+	label=16
+	model=Models/valcriClose_light.dat
+	threshold=4.0
+}
+
+
 
 HandTracker
 {
