set onoff sample to use gestoos_dependencies and 10_8 target

--- a/samples/OnOffStatic/resources/interactor_macos.cfg
+++ b/samples/OnOffStatic/resources/interactor_macos.cfg
@@ -2,7 +2,7 @@ Gesture
 {
 	name= Tee
 	label=1
-	model=OnOffStatic.app/Contents/Resources/Models/GestooTee_320.dat
+	model=Models/GestooTee_320.dat
 	threshold=7.0
 	usage=SYM
 	complexity = 15
@@ -12,7 +12,7 @@ Gesture
 {
 	name= Pause
 	label=2
-	model=OnOffStatic.app/Contents/Resources/Models/GestooPause_320.dat
+	model=Models/GestooPause_320.dat
 	threshold=7.5
 	usage=SYM
 	complexity = 15
@@ -22,7 +22,7 @@ Gesture
 {
 	name= Silence
 	label=3
-	model=OnOffStatic.app/Contents/Resources/Models/GestooSilence_320.dat
+	model=Models/GestooSilence_320.dat
 	threshold=6.0
 	usage=SYM
 	complexity = 15
@@ -32,7 +32,7 @@ Gesture
 {
 	name= Audio
 	label=4
-	model=OnOffStatic.app/Contents/Resources/Models/GestooAudio_320.dat
+	model=Models/GestooAudio_320.dat
 	threshold=4.0
 	usage=SYM
 	complexity = 15
@@ -42,7 +42,7 @@ Gesture
 {
 	name= FWD
 	label=7
-	model=OnOffStatic.app/Contents/Resources/Models/GestooFwd_320.dat
+	model=Models/GestooFwd_320.dat
 	threshold=2.5
 	usage=RIGHT
 	complexity = 15
@@ -52,7 +52,7 @@ Gesture
 {
 	name= RWD
 	label=8
-	model=OnOffStatic.app/Contents/Resources/Models/GestooFwd_320.dat
+	model=Models/GestooFwd_320.dat
 	threshold=2.5
 	usage=LEFT
 	complexity = 15
