adding 10_8 target to slider sample

--- a/samples/Slider/resources/interactor.cfg
+++ b/samples/Slider/resources/interactor.cfg
@@ -2,7 +2,7 @@ Gesture
 {
         name= Audio
         label=4
-        model=Slider.app/Contents/Resources/Models/GestooAudio_320.dat
+        model=Models/GestooAudio_320.dat
         threshold=4.0
         usage=SYM
         complexity = 15
@@ -12,7 +12,7 @@ HandGesture
 {
 	name=Index
 	label=12
-	model=Slider.app/Contents/Resources/Models/valcriIndex_light.dat
+	model=Models/valcriIndex_light.dat
 	threshold=4.0
 }
 
@@ -20,7 +20,7 @@ HandGesture
 {
 	name=L
 	label=13
-	model=Slider.app/Contents/Resources/Models/valcriL_light.dat
+	model=Models/valcriL_light.dat
 	threshold=6.0
 }
 
@@ -28,7 +28,7 @@ HandGesture
 {
 	name=Victory
 	label=14
-	model=Slider.app/Contents/Resources/Models/valcriVictory_light.dat
+	model=Models/valcriVictory_light.dat
 	threshold=4.0
 }
 
@@ -36,7 +36,7 @@ HandGesture
 {
 	name=Open
 	label=15
-	model=Slider.app/Contents/Resources/Models/valcriOpen_light.dat
+	model=Models/valcriOpen_light.dat
 	threshold=4.0
 }
 
@@ -44,14 +44,14 @@ HandGesture
 {
 	name=Close
 	label=16
-	model=Slider.app/Contents/Resources/Models/valcriClose_light.dat
+	model=Models/valcriClose_light.dat
 	threshold=4.0
 }
 
 
 HandTracker
 {
-	model=Slider.app/Contents/Resources/Models/hand_detector_light.dat
+	model=Models/hand_detector_light.dat
 	threshold=5.0
 	tracking_threshold=2.0
 }
