--- a/samples/GrabDrop/resources/interactor.cfg
+++ b/samples/GrabDrop/resources/interactor.cfg
@@ -3,7 +3,7 @@ HandGesture
 {
 	name=L
 	label=13
-	model=GrabDrop.app/Contents/Resources/Models/valcriL_light.dat
+	model=Models/valcriL_light.dat
 	threshold=5.5
 }
 
@@ -11,7 +11,7 @@ HandGesture
 {
 	name=Close
 	label=16
-	model=GrabDrop.app/Contents/Resources/Models/valcriClose_light.dat
+	model=Models/valcriClose_light.dat
 	threshold=3.0
 }
 
@@ -34,7 +34,7 @@ HandGesture
 
 HandTracker
 {
-	model=GrabDrop.app/Contents/Resources/Models/hand_detector_light.dat
+	model=Models/hand_detector_light.dat
 	threshold=5.0
 	tracking_threshold=2.0
 }
