adding 10_8 target to emptyexample

--- a/samples/EmptyExample/resources/interactor.cfg
+++ b/samples/EmptyExample/resources/interactor.cfg
@@ -1,9 +1,9 @@
 
 HandTracker
 {
-	model=ActiveEdge.app/Contents/Resources/Models/hand_detector.dat
-	threshold=6.5
-	tracking_threshold=2.5
+	model=Models/hand_detector_light.dat
+	threshold=5.0
+	tracking_threshold=2.0
 }
 	
 
