--- a/samples/ActiveEdges/vc2013/ActiveEdges.vcxproj.filters
+++ b/samples/ActiveEdges/vc2013/ActiveEdges.vcxproj.filters
@@ -38,5 +38,16 @@
     <ClInclude Include="..\include\ActiveEdge.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\Widget.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
