Tunning gestures in the car

--- a/samples/InTheCar/resources/interactor.cfg
+++ b/samples/InTheCar/resources/interactor.cfg
@@ -3,16 +3,16 @@ HandGesture
 {
 	name=Victory
 	label=14
-	model=Models/valcriVictory_light.dat
-	threshold=3.0
+	model=Models/carVictory.dat
+	threshold=2.0
 }
 
 
 HandTracker
 {
-	model=Models/hand_detector_light.dat
-	threshold=5.0
-	tracking_threshold=2.0
+	model=Models/carVictory.dat
+	threshold=2.0
+	tracking_threshold=0.5
 }
 	
 
