Changing config Fixing DriverInteraction bugs

--- a/samples/InTheCar/resources/interactor.cfg
+++ b/samples/InTheCar/resources/interactor.cfg
@@ -4,15 +4,15 @@ HandGesture
 	name=Victory
 	label=14
 	model=Models/carVictory.dat
-	threshold=2.0
+	threshold=4.0
 }
 
 
 HandTracker
 {
-	model=Models/carVictory.dat
-	threshold=2.0
-	tracking_threshold=0.5
+	model=Models/carHand_light.dat
+	threshold=4.0
+	tracking_threshold=1.0
 }
 	
 
