Better victory response

--- a/samples/InTheCar/resources/interactor.cfg
+++ b/samples/InTheCar/resources/interactor.cfg
@@ -4,13 +4,13 @@ HandGesture
 	name=Victory
 	label=14
 	model=Models/carVictory.dat
-	threshold=5.0
+	threshold=5.5
 }
 
 
 HandTracker
 {
-	model=Models/carHand_light.dat
+	model=Models/carHand.dat
 	threshold=3.0
 	tracking_threshold=1.5
 }
