Fixed bug, adding second gesture

--- a/samples/InTheCar/resources/interactor.cfg
+++ b/samples/InTheCar/resources/interactor.cfg
@@ -4,15 +4,23 @@ HandGesture
 	name=Victory
 	label=14
 	model=Models/carVictory.dat
-	threshold=5.5
+	threshold=6.0
+}
+
+HandGesture
+{
+	name=Victory
+	label=13
+	model=Models/carThumbLeft.dat
+	threshold=6.0
 }
 
 
 HandTracker
 {
 	model=Models/carHand.dat
-	threshold=3.0
-	tracking_threshold=1.5
+	threshold=4.0
+	tracking_threshold=2.0
 }
 	
 
