--- a/samples/InTheCar/resources/interactor.cfg
+++ b/samples/InTheCar/resources/interactor.cfg
@@ -9,9 +9,17 @@ HandGesture
 
 HandGesture
 {
-	name=Victory
+	name=ThumbLeft
 	label=13
 	model=Models/carThumbLeft.dat
+	threshold=6.0
+}
+
+HandGesture
+{
+	name=ThumbsUp
+	label=12
+	model=Models/carThumbsUp.dat
 	threshold=6.0
 }
 
