--- a/samples/GrabDrop/resources/interactor.cfg
+++ b/samples/GrabDrop/resources/interactor.cfg
@@ -1,10 +1,20 @@
 
+
+HandGesture
+{
+	name=Open
+	label=15
+	model=GrabDrop.app/Contents/Resources/Models/valcriOpen_light.dat
+	threshold=5.5
+}
+
+
 HandGesture
 {
 	name=L
 	label=13
 	model=GrabDrop.app/Contents/Resources/Models/valcriL_light.dat
-	threshold=5.5
+	threshold=5.0
 }
 
 HandGesture
