changing thresholds and models. hand_huge and L

--- a/samples/Slider/resources/interactor.cfg
+++ b/samples/Slider/resources/interactor.cfg
@@ -3,7 +3,7 @@ Gesture
         name= Audio
         label=4
         model=G_Static_Audio.dat
-        threshold=4.0
+        threshold=1.5
         usage=SYM
         complexity = 15
 }
@@ -20,7 +20,7 @@ HandGesture
 {
 	name=L
 	label=13
-	model=G_Hand_L_light.dat
+	model=G_Hand_L.dat
 	threshold=6.0
 }
 
@@ -51,7 +51,7 @@ HandGesture
 
 HandTracker
 {
-	model=Hand_light.dat
+	model=Hand_huge.dat
 	threshold=5.0
 	tracking_threshold=2.0
 }
