--- a/samples/OnOffStatic/xcode/OnOffStatic_10_8-Info.plist
+++ b/samples/OnOffStatic/xcode/OnOffStatic_10_8-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.barbariangroup.Earthquake</string>
+	<string>com.gestoos.OnOffStatic</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
