--- a/samples/MapView/vc2013/MapView.vcxproj.filters
+++ b/samples/MapView/vc2013/MapView.vcxproj.filters
@@ -41,10 +41,24 @@
     <ClInclude Include="..\..\..\cindergestooslib\include\Cinderactor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Resource.rc">
       <Filter>Resource Files</Filter>
     </ResourceCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="gestoos_sample_logo_256.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\resources\help.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\resources\ohio-bike-map.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
