--- a/samples/Slider/vc2013/Slider.vcxproj
+++ b/samples/Slider/vc2013/Slider.vcxproj
@@ -120,7 +120,7 @@
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>..\..\..\cindergestooslib\include;..\include;..\..\..\..\..\include;$(CINDER_LIB)\boost;$(CINDER_LIB)\include;$(OPENCV_LIB)\include;$(OPENNI_INCLUDE64);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;..\..\..\cindergestooslib\include;..\..\..\lib\win64\cinder_0.8.6_win\include;..\..\..\lib\win64\cinder_0.8.6_win\boost;$(GESTOOS_DIR)\external\opencv\include;$(GESTOOS_DIR)\external\opencv\include\opencv;$(OPENNI_INCLUDE64);$(GESTOOS_DIR)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -130,6 +130,9 @@
       <AdditionalLibraryDirectories>..\..\..\lib\win64\cinder_0.8.6_win\lib\msw\x64;$(GESTOOS_DIR)\lib\x64\vc12\release;$(GESTOOS_DIR)\external\opencv\lib64\Release\;$(GESTOOS_DIR)\external\boost\lib64\;$(OPENNI_LIB64);$(GESTOOS_DIR)\external\curl\x64\lib</AdditionalLibraryDirectories>
       <AdditionalDependencies>cinder-v120.lib;libcurl.lib;Advapi32.lib;opencv_world300.lib;opencv_ts300.lib;fezoolib.lib;libboost_filesystem-vc120-mt-1_55.lib;libboost_date_time-vc120-mt-1_55.lib;libboost_program_options-vc120-mt-1_55.lib;libboost_system-vc120-mt-1_55.lib;libboost_thread-vc120-mt-1_55.lib;libboost_serialization-vc120-mt-1_55.lib;OpenNI2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
+    <ResourceCompile>
+      <AdditionalIncludeDirectories>..\include;..\..\..\lib\win64\cinder_0.8.6_win\include</AdditionalIncludeDirectories>
+    </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\cindergestooslib\src\Cinderactor.cpp" />
@@ -141,9 +144,17 @@
     <ClInclude Include="..\..\..\cindergestooslib\include\Cinderactor.h" />
     <ClInclude Include="..\..\..\cindergestooslib\include\MovingRect.h" />
     <ClInclude Include="..\include\Slider.h" />
+    <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\resources\interactor.cfg" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\resources\help.png" />
+    <Image Include="gestoos_sample_logo_256.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
