--- a/samples/MapView/resources/interactor.cfg
+++ b/samples/MapView/resources/interactor.cfg
@@ -1,7 +1,7 @@
 
 HandTracker
 {
-	model=Models/hand_detector_light.dat
+	model=Models/Hand_huge.dat
 	threshold=5.0
 	tracking_threshold=2.0
 }
@@ -10,7 +10,7 @@ HandGesture
 {
 	name=L
 	label=13
-	model=Models/valcriL.dat
+	model=Models/G_Hand_L.dat
 	threshold=5.0
 }
 
@@ -18,7 +18,7 @@ HandGesture
 {
 	name=Close
 	label=16
-	model=Models/valcriClose_light.dat
+	model=Models/G_Hand_Close_light.dat
 	threshold=4.0
 }
 
