--- a/samples/OnOffStatic/resources/interactor.cfg
+++ b/samples/OnOffStatic/resources/interactor.cfg
@@ -2,66 +2,64 @@ Gesture
 {
 	name= Tee
 	label=1
-	model=..\..\..\..\..\data\Tee.dat  	
-	threshold=3.5
+	model=Models/G_Static_Tee.dat
+	threshold=3.0
 	usage=SYM
-	complexity = 15
+	complexity = 20
 }
 
 Gesture
 {
 	name= Pause
 	label=2
-	model=..\..\..\..\..\data\Pause.dat  	
-	threshold=5.0
+	model=Models/G_Static_Pause.dat
+	threshold=4.0
 	usage=SYM
-	complexity = 15
+	complexity = 20
 }
 
 Gesture
 {
 	name= Silence
 	label=3
-	model=..\..\..\..\..\data\Silence.dat  	
+	model=Models/G_Static_Silence.dat
 	threshold=3.0
 	usage=SYM
-	complexity = 15
+	complexity = 20
 }
 
 Gesture
 {
 	name= Audio
 	label=4
-	model=..\..\..\..\..\data\Audio.dat  	
-	threshold=2.5
+	model=Models/G_Static_Audio.dat
+	threshold=3.0
 	usage=SYM
-	complexity = 15
+	complexity = 20
 }
 
 Gesture
 {
 	name= FWD
 	label=7
-	model=..\..\..\..\..\data\GestooFwd.dat	
-	threshold=3.5
+	model=Models/G_Static_Fwd.dat
+	threshold=3.0
 	usage=RIGHT
-	complexity = 15
+	complexity = 20
 }
 
 Gesture
 {
 	name= RWD
 	label=8
-	model=..\..\..\..\..\data\GestooFwd.dat	
-	threshold=2.0
+	model=Models/G_Static_Fwd.dat
+	threshold=3.0
 	usage=LEFT
-	complexity = 15
-}
-
-	
+	complexity = 20
+}	
 
 DepthRange
 {
 	min=800
-	max=2000
+	max=3000
 }
