--- a/samples/OnOffStatic/vc2013/OnOffStatic.vcxproj
+++ b/samples/OnOffStatic/vc2013/OnOffStatic.vcxproj
@@ -45,6 +45,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
   <ImportGroup Label="ExtensionSettings">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\IntelOpenCL.props" />
   </ImportGroup>
   <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
@@ -120,15 +121,15 @@
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <WarningLevel>Level3</WarningLevel>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
-      <AdditionalIncludeDirectories>..\include;..\..\..\cindergestooslib\include;..\..\..\lib\win64\cinder_0.8.6_win\include;..\..\..\lib\win64\cinder_0.8.6_win\boost;$(GESTOOS_DIR)\external\opencv\include;$(GESTOOS_DIR)\external\opencv\include\opencv;$(OPENNI_INCLUDE64);$(GESTOOS_DIR)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\include;..\..\..\cindergestooslib\include;..\..\..\lib\win64\cinder_0.8.6_win\include;..\..\..\lib\win64\cinder_0.8.6_win\boost;$(GESTOOS_DIR)\third_party\opencv\include;$(GESTOOS_DIR)\third_party\opencv\include\opencv;$(OPENNI_INCLUDE64);$(GESTOOS_DIR)\third_party\include;$(GESTOOS_DIR)\third_party\openni2\include;$(GESTOOS_DIR)\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Windows</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalLibraryDirectories>..\..\..\lib\win64\cinder_0.8.6_win\lib\msw\x64;$(GESTOOS_DIR)\lib\x64\vc12\release;$(GESTOOS_DIR)\external\opencv\lib64\Release\;$(GESTOOS_DIR)\external\boost\lib64\;$(OPENNI_LIB64);$(GESTOOS_DIR)\external\curl\x64\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>cinder-v120.lib;libcurl.lib;Advapi32.lib;opencv_world300.lib;opencv_ts300.lib;fezoolib.lib;libboost_filesystem-vc120-mt-1_55.lib;libboost_date_time-vc120-mt-1_55.lib;libboost_program_options-vc120-mt-1_55.lib;libboost_system-vc120-mt-1_55.lib;libboost_thread-vc120-mt-1_55.lib;libboost_serialization-vc120-mt-1_55.lib;OpenNI2.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\..\lib\win64\cinder_0.8.6_win\lib\msw\x64;$(GESTOOS_DIR)\third_party\lib;$(GESTOOS_DIR)\third_party\opencv\lib64\Release\;$(GESTOOS_DIR)\third_party\boost\lib64\;$(OPENNI_LIB64);$(GESTOOS_DIR)\third_party\freenect2\lib64;$(GESTOOS_DIR)\third_party\freenect2\bin64;$(GESTOOS_DIR)\third_party\curl\x64\lib;$(GESTOOS_DIR)\lib\x64\vc12\release</AdditionalLibraryDirectories>
+      <AdditionalDependencies>cinder-v120.lib;libcurl.lib;Advapi32.lib;opencv_world300.lib;opencv_ts300.lib;fezoolib.lib;libboost_filesystem-vc120-mt-1_55.lib;libboost_date_time-vc120-mt-1_55.lib;libboost_program_options-vc120-mt-1_55.lib;libboost_system-vc120-mt-1_55.lib;libboost_thread-vc120-mt-1_55.lib;libboost_serialization-vc120-mt-1_55.lib;OpenNI2.lib;freenect2.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <ResourceCompile>
       <AdditionalIncludeDirectories>..\include;..\..\..\lib\win64\cinder_0.8.6_win\include</AdditionalIncludeDirectories>
@@ -166,5 +167,6 @@
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
+    <Import Project="$(VCTargetsPath)\BuildCustomizations\IntelOpenCL.targets" />
   </ImportGroup>
 </Project>
